deployment-service-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b  
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: ingress
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: service-b
