network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-service-a-bitcoin-to-service-b
  namespace: ingress
spec:
  podSelector:
    matchLabels:
      app: service-a-bitcoin
  policyTypes:
  - Ingress  
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-b
